[package]
name = "dirgit"
version = "0.1.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "A cli tool that lets you quickly check the git status of all the current directory (or subdirectories)."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/carrier-pigeon/"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
